# ai-engineering

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
chapters/00-setup/: README.md
chapters/00-setup/experiments/: verify_claude_auth.py
chapters/01-baseline/: README.md
chapters/01-baseline/experiments/: results.json  train_baseline.py
chapters/02-llm-mechanics/: README.md
chapters/02-llm-mechanics/experiments/: 01_tokenization.py  02_sampling.py  03_structured_output.py  04_quantization.py  05_schema_token_cost.py  results_quantization.json  results_sampling.json  results_schema_token_cost.json  results_structured_output.json  results_tokenization.json
chapters/03-eval-harness/: README.md
chapters/03-eval-harness/experiments/: 01_sample_for_labeling.py  02_prelabel_claude.py  03_baseline_tfidf.py  04_llm_classifier.py  05_llm_judge_bias.py  06_cost_comparison.py  cv_folds.json  golden_set_labeled.csv  golden_set_prelabeled.csv  golden_set_template.csv  label_cli.py  results_baseline_tfidf.json  results_cost_comparison.json  results_llm_classifier.json  results_llm_judge_bias.json
cip/: __init__.py
cip/data/: __init__.py  download.py  ingest.py
cip/evals/: __init__.py  golden_set.py  judge.py  metrics.py
cip/llm/: __init__.py  ollama_client.py  timing.py
cip/observability/: __init__.py
data/: README.md
docs/adr/: 0001-tech-stack.md  0002-publish-golden-set-on-kaggle.md
kaggle/churn-signal-golden-set/: build_dataset.py
tests/: test_evals_golden_set.py  test_evals_metrics.py  test_llm_timing.py
(+24 files in other folders)
