[project]
name = "ai-engineering"
version = "0.1.0"
description = "AI engineering portfolio: from data platforms to production LLM systems"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    "requests>=2.32",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
]

[dependency-groups]
dev = [
    "kaggle>=2.2.3",
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cip"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests", "chapters"]
